--- a/apple.html
+++ b/apple.html
@@ -14,20 +14,20 @@
     <div id="layout">
       <header>
         <div class="deed">
-          <div><i class="fa-brands fa-apple fa-xl"></i></div>
-          <div>Store</div>
-          <div>Mac</div>
-          <div>iPad</div>
-          <div>iPhone</div>
-          <div>Watch</div>
-          <div>Vision</div>
-          <div>Airpods</div>
-          <div>TV & Home</div>
-          <div>Entertainment</div>
-          <div>Accessories</div>
-          <div>Support</div>
-          <div><img src="./Item → Button - Search apple.com.png" alt="" /></div>
-          <div><img src="./Item.png" alt="" /></div>
+          <nav><i class="fa-brands fa-apple fa-xl"></i></nav>
+          <a href="./applestore.html"> Store</a>
+          <nav>Mac</nav>
+          <nav>iPad</nav>
+          <nav>iPhone</nav>
+          <nav>Watch</nav>
+          <nav>Vision</nav>
+          <nav>Airpods</nav>
+          <nav>TV & Home</nav>
+          <nav>Entertainment</nav>
+          <nav>Accessories</nav>
+          <nav>Support</nav>
+          <nav><img src="./Item → Button - Search apple.com.png" alt="" /></nav>
+          <nav><img src="./Item.png" alt="" /></nav>
         </div>
         <div class="donate">
           We're donating $5 to the Global Fund for every purchase made with
@@ -68,14 +68,14 @@
     <div class="page4">
       <div class="duuruv">
         <div class="neg">
-          <div>
+          <div class="sda">
             <div> <img src="./air.png" alt=""></div>
           <div class="bichig">Two sizes. Faster chip. Does it all</div>
           <div class="button">
             <button class="learn">Learn more</button>
             <button class="buy">Buy</button>
           </div></div>
-          <div class="ungu">Hello, Apple intelligence</div>
+          <div class="ungu"><span>Hello, Apple intelligence</span></div>
         </div>
         <div class="hoyr">
           <div class="arvanzurgaa">Airpods Pro 2</div>
@@ -117,6 +117,99 @@
           </div>
         </div>
     </div>
+  </div>
+  <div class="page5">
+    <div id="item1" class="scroll" style="background-image: url(./napoleon.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Drama</span>
+        <span class="span2">.</span>
+        <span class="span3">Experience Ridley Scott's extended epic.</span>
+      </div>
+    </div>
+    <div id="item2" class="scroll" style="background-image: url(./bad-monkey.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Comedy</span>
+        <span class="span2">.</span>
+        <span class="span3">The shady side of paradise.</span>
+      </div>
+    </div>
+    <div id="item3" class="scroll" style="background-image: url(./instigators.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Action</span>
+        <span class="span2">.</span>
+        <span class="span3">Worst. Heist. Ever.</span>
+      </div>
+    </div>
+    <div id="item4" class="scroll" style="background-image: url(./k-pop-idols.jpg);">
+      <div class="carousel">
+        <button class="dardag2">Stream now</button>
+        <span class="span1">Documentary</span>
+        <span class="span2">.</span>
+        <span class="span3">All that glitters isn't gold.</span>
+      </div>
+    </div>
+    <div id="item5" class="scroll" style="background-image: url(./season-pass.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+         <span class="span3">Watch messi, every club, and every match--live.</span>
+      </div>
+    </div>
+    <div id="item6" class="scroll" style="background-image: url(./pressumed-innocent.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Crime</span>
+        <span class="span2">.</span>
+        <span class="span3">Presume nothing.</span>
+      </div> 
+    </div>
+    <div id="item7" class="scroll" style="background-image: url(./pachinko.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Drama</span>
+        <span class="span2">.</span>
+        <span class="span3">New season.</span>
+      </div>
+    </div>
+    <div id="item8" class="scroll" style="background-image: url(./baseball.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span3">Live MLB games, every friday.</span>
+      </div>
+    </div>
+    <div id="item9" class="scroll" style="background-image: url(./lady-in-the-lake.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Thriller</span>
+        <span class="span2">.</span>
+        <span class="span3">Natalie Portman and Moses Ingram star in a visionary noir thriller.</span>
+    </div>
+    </div>
+    <div id="item10" class="scroll" style="background-image: url(./morning-show.jpg);">
+      <div class="carousel">
+        <button class="dardag2"> Stream now</button>
+        <span class="span1">Drama</span>
+        <span class="span2">.</span>
+        <span class="span3">16 Emmy Nominations Including Best Drama</span>
+      </div>
+    </div>
+  </div>
+  <div class="page6">
+    <a href="#item1" class="dardag"></a>
+    <a href="#item2" class="dardag"></a>
+    <a href="#item3" class="dardag"></a>
+    <a href="#item4" class="dardag"></a>
+    <a href="#item5" class="dardag"></a>
+    <a href="#item6" class="dardag"></a>
+    <a href="#item7" class="dardag"></a>
+    <a href="#item8" class="dardag"></a>
+    <a href="#item9" class="dardag"></a>
+    <a href="#item10" class="dardag"></a>
+  </div>
+  <div class="page7">
+
   </div>
   </body>
 </html>
