--- a/applestore.html
+++ b/applestore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./apple/applestore.css" />
+    <link rel="stylesheet" href="./applestore.css" />
     <script
       src="https://kit.fontawesome.com/3566a1fbda.js"
       crossorigin="anonymous"
