--- a/applestore.html
+++ b/applestore.html
@@ -33,9 +33,9 @@
           Pay monthly at 0% APR when you choose to check out with Apple Card
           Monthly Installments.
         </div>
+        <div class="background"><img src="./Background.png" alt="" /></div>
       </header>
       <div class="page1">
-        <div><img src="./Background.png" alt="" /></div>
         <div class="bichig">
           <div class="giftbichig">
             <span class="store">Store.</span>
@@ -43,10 +43,10 @@
           </div>
           <div class="avgai">
             <div class="tusda">
-              <img
+              <!-- <img
                 src="./f2b679ae6791d18fc8aeadd75a3c2d3e35c715ef.jpg"
                 alt=""
-              />
+              /> -->
               <span class="tom">Need shopping help?</span>
               <a class="jijig" href="">Ask a Specialist</a>
             </div>
@@ -57,17 +57,168 @@
           </div>
         </div>
         <div class="accessories">
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
-          <div class="tag"></div>
+          <div class="tag">
+            <div><img class="zurag" src="./1.png" alt="" /></div>
+            <div class="title">Mac</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./2.png" alt="" /></div>
+            <div class="title">iPhone</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./3.png" alt="" /></div>
+            <div class="title">iPad</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./4.png" alt="" /></div>
+            <div class="title">Apple Watch</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./5.png" alt="" /></div>
+            <div class="title">Apple Vision Pro</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./6.png" alt="" /></div>
+            <div class="title">Airdpods</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./7.png" alt="" /></div>
+            <div class="title">Airtag</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./8.png" alt="" /></div>
+            <div class="title">Apple TV 4K</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./9.png" alt="" /></div>
+            <div class="title">Home Pad</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./10.png" alt="" /></div>
+            <div class="title">Accessories</div>
+          </div>
+          <div class="tag">
+            <div><img class="zurag" src="./11.png" alt="" /></div>
+            <div class="title">Apple Gift Card</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="page2">
+        <div class="bichig2">
+          <span class="store">The latest.</span>
+          <span class="magic">Let them unwrap wonders.</span>
+        </div>
+        <div class="scroll">
+          <div class="gadar" style="background-image: url(./1.jpeg)">
+            <span class="name">iMac</span>
+            <span class="utga">Apple intelligence</span>
+            <span class="price">From $1299 or @108.25/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./2.jpeg)">
+            <span class="name1">iPhone 16 pro </span>
+            <span class="utga1">Apple intelligence</span>
+            <span class="price1">From $999 or $41.62/mo/ for 24mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./3.jpeg)">
+            <span class="name">iPad Mini</span>
+            <span class="utga"> Apple intelligence</span>
+            <span class="price">From $499 or $41.58/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./4.jpeg)">
+            <span class="name">Apple Watch Series 10</span>
+            <span class="utga">Thinstant classic</span>
+            <span class="price">From $399 or $33.25/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./5.jpeg)">
+            <span class="name">iPods 4</span>
+            <span class="utga">Iconic. Now Supersonic.</span>
+            <span class="price"
+              >Starting at $129 with Active Noise Cancellation $179</span
+            >
+          </div>
+          <div class="gadar" style="background-image: url(./6.jpeg)">
+            <span class="name1">iPhone 16</span>
+            <span class="utga1">Apple intelligence</span>
+            <span class="price1">From $799 or $66.58/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./7.jpeg)">
+            <span class="name1">Apple Watch Ultra 2</span>
+            <span class="utga1">New Finish. Never quit</span>
+            <span class="price1">From $799 or $66.58/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./8.jpeg)">
+            <span class="name">Apple Vision Pro</span>
+            <span class="utga">Welcome to the era of spatial computing.</span>
+            <span class="price">From $3499</span>
+          </div>
+          <div class="gadar" style="background-image: url(./9.jpeg)">
+            <span class="name">Macbook Air</span>
+            <span class="utga">Designed to go places.</span>
+            <span class="price">From $999 or $83.25/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./10.jpeg)">
+            <span class="name1">iPad Pro</span>
+            <span class="utga1">Apple intelligence</span>
+            <span class="price1">From $999 or $83.25/mo. for 12 mo.</span>
+          </div>
+          <div class="gadar" style="background-image: url(./11.jpeg)">
+            <span class="name">iPad Air</span>
+            <span class="utga">Apple Intelligence</span>
+            <span class="price">From $599 or $49.91/mo. for 12 mo.</span>
+          </div>
+        </div>
+      </div>
+      <div class="page3">
+        <div class="bichig2">
+          <span class="store">Personalization.</span>
+          <span class="magic">Let them unwrap wonders.</span>
+        </div>
+        <div class="scroll2">
+            <div class="gadar" style="background-image: url(./3p1.jpg)">
+              <span class="namep">Make their gift one of a kind</span>
+            </div>
+          </div>
+          <div class="neeg">
+            <img class="hoyr" src="./3p2.jpg" alt="">
+            <!-- <div class="gadar" style="background-image: url(./3p2.jpg)"> -->
+              <div></div>
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods Max - Pruple</span>
+              <span class="une">$549.00</span>
+            </div>
+          <div class="neeg">
+            <img class="hoyr" src="./3p3.jpg" alt="">
+            <!-- <div class="gadar" style="background-image: url(./3p3.jpg)"> -->
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods Pro 2</span>
+              <span class="une">$249.00</span>
+            </div>
+          </div>
+          <div class="neeg">
+            <img class="hoyr" src="./3p4.jpg" alt="">
+            <!-- <div class="gadar" style="background-image: url(./3p4.jpg)"> -->
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods 4 with Active Noise Cancellation</span>
+              <span class="une">$179.00</span>
+            </div>
+          </div>
+          <div class="neeg">
+            <img class="hoyr" src="./3p5.jpg" alt="">
+            <!-- <div class="gadar" style="background-image: url(./3p5.jpg)"> -->
+              <span class="utgap3">New</span>
+              <span class="ner">Apple Pencil Pro</span>
+              <span class="une">$49.00</span>
+            </div>
+          </div>
+          <div class="neeg">
+            <img class="hoyr" src="./3p6.jpg" alt="">
+            <!-- <div class="gadar" style="background-image: url(./3p6.jpg)"> -->
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods 4 with Actvie Noise Cancellation</span>
+              <span class="une">$179.00</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
