--- a/applestore.html
+++ b/applestore.html
@@ -169,58 +169,372 @@
           </div>
         </div>
       </div>
+
       <div class="page3">
         <div class="bichig2">
           <span class="store">Personalization.</span>
           <span class="magic">Let them unwrap wonders.</span>
         </div>
-        <div class="scroll2">
-            <div class="gadar" style="background-image: url(./3p1.jpg)">
-              <span class="namep">Make their gift one of a kind</span>
-            </div>
+        <div class="neeg">
+          <div class="zyrag" style="background-image: url(./3p1.jpg)">
+            <span class="namep">Make their gift one of a kind</span>
           </div>
-          <div class="neeg">
-            <img class="hoyr" src="./3p2.jpg" alt="">
-            <!-- <div class="gadar" style="background-image: url(./3p2.jpg)"> -->
-              <div></div>
+          <div class="neg">
+            <img class="hoyr" src="./3p2.jpg" alt="" />
+            <div class="zrg">
+              <img
+                class="zurg"
+                src="./c8859a38becf3dafbd1ac513c387931f8dd9004e.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./7068a3164a1437cde8990eb8a05074bd7844af76.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./57943202e808d77abad5dabffc96c10a03d7c737.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./badf95791c7cad940549a7a420148fabe0d9f366.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./865ab9cf96a81f63746fc5146433d68082189f87.jpg"
+                alt=""
+              />
+            </div>
+            <div class="span">
               <span class="utgap3">Free Engraving</span>
               <span class="ner">Airpods Max - Pruple</span>
               <span class="une">$549.00</span>
             </div>
-          <div class="neeg">
-            <img class="hoyr" src="./3p3.jpg" alt="">
-            <!-- <div class="gadar" style="background-image: url(./3p3.jpg)"> -->
+          </div>
+
+          <div class="neg">
+            <img class="hoyr" src="./3p3.jpg" alt="" />
+            <div class="span">
               <span class="utgap3">Free Engraving</span>
               <span class="ner">Airpods Pro 2</span>
               <span class="une">$249.00</span>
             </div>
           </div>
-          <div class="neeg">
-            <img class="hoyr" src="./3p4.jpg" alt="">
-            <!-- <div class="gadar" style="background-image: url(./3p4.jpg)"> -->
+
+          <div class="neg">
+            <img class="hoyr" src="./3p4.jpg" alt="" />
+            <div class="span">
               <span class="utgap3">Free Engraving</span>
               <span class="ner">Airpods 4 with Active Noise Cancellation</span>
               <span class="une">$179.00</span>
             </div>
           </div>
-          <div class="neeg">
-            <img class="hoyr" src="./3p5.jpg" alt="">
-            <!-- <div class="gadar" style="background-image: url(./3p5.jpg)"> -->
+
+          <div class="neg">
+            <img class="hoyr" src="./3p5.jpg" alt="" />
+            <div class="span">
               <span class="utgap3">New</span>
               <span class="ner">Apple Pencil Pro</span>
               <span class="une">$49.00</span>
             </div>
           </div>
-          <div class="neeg">
-            <img class="hoyr" src="./3p6.jpg" alt="">
-            <!-- <div class="gadar" style="background-image: url(./3p6.jpg)"> -->
+
+          <div class="neg">
+            <img class="hoyr" src="./3p6.jpg" alt="" />
+            <div class="span">
               <span class="utgap3">Free Engraving</span>
               <span class="ner">Airpods 4 with Actvie Noise Cancellation</span>
               <span class="une">$179.00</span>
             </div>
           </div>
+
+          <div class="neg">
+            <img class="hoyr" src="./3p2.jpg" alt="" />
+            <div class="zrg">
+              <img
+                class="zurg"
+                src="./c8859a38becf3dafbd1ac513c387931f8dd9004e.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./7068a3164a1437cde8990eb8a05074bd7844af76.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./57943202e808d77abad5dabffc96c10a03d7c737.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./badf95791c7cad940549a7a420148fabe0d9f366.jpg"
+                alt=""
+              />
+              <img
+                class="zurg"
+                src="./865ab9cf96a81f63746fc5146433d68082189f87.jpg"
+                alt=""
+              />
+            </div>
+            <div class="span">
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods Max - Pruple</span>
+              <span class="une">$549.00</span>
+            </div>
+          </div>
+
+          <div class="neg">
+            <img class="hoyr" src="./3p3.jpg" alt="" />
+            <div class="span">
+              <span class="utgap3">Free Engraving</span>
+              <span class="ner">Airpods Pro 2</span>
+              <span class="une">$249.00</span>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="page4">
+        <div class="bichig3">
+          <span class="store">Holiday Picks..</span>
+          <span class="magic">Add more magic to the moment.</span>
+        </div>
+        <div class="neeg">
+          <div class="zyrag" style="background-image: url(../4-1.jpg)">
+            <span class="namep"
+              >Surprise your favorites with these favorites.</span
+            >
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./1-shar.jpg" alt="" />
+              <img class="zurg" src="./1-grey.jpg" alt="" />
+              <img class="zurg" src="./1-nogoon.jpg" alt="" />
+              <img class="zurg" src="./1-tsenher.jpg" alt="" />
+              <img class="zurg" src="./1-ygan.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="utgap3">New</span>
+              <span class="ner"
+                >iPhone 16 Silicone Case with Magsafe - Star Friut</span
+              >
+              <span class="une">$49.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="./4-0.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./2-1.jpg" alt="" />
+              <img class="zurg" src="./2-2.jpg" alt="" />
+              <img class="zurg" src="./2-3.jpg" alt="" />
+              <img class="zurg" src="./2-4.jpg" alt="" />
+              <img class="zurg" src="./2-5.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="ner">HomePod mini - White</span>
+              <span class="une">$99.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-3.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./3-1.jpg" alt="" />
+              <img class="zurg" src="./3-2.jpg" alt="" />
+              <img class="zurg" src="./3-3.jpg" alt="" />
+              <img class="zurg" src="./3-4.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="utgap3">New</span>
+              <span class="ner"
+                >Smart Folio for iPad Air 11 - inch (m2) -Sage</span
+              >
+              <span class="une">$79.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-4.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./4-1.jpg" alt="" />
+              <img class="zurg" src="4-2.jpg" alt="" />
+              <img class="zurg" src="./4-3.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="ner"
+                >Beats Solo 4 - On-Ear Wireless Headphones -Slate blue</span
+              >
+              <span class="une">$79.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./1-shar.jpg" alt="" />
+              <img class="zurg" src="./1-grey.jpg" alt="" />
+              <img class="zurg" src="./1-nogoon.jpg" alt="" />
+              <img class="zurg" src="./1-tsenher.jpg" alt="" />
+              <img class="zurg" src="./1-ygan.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="utgap3">New</span>
+              <span class="ner"
+                >iPhone 16 Silicone Case with Magsafe - Star Friut</span
+              >
+              <span class="une">$49.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="./4-0.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./2-1.jpg" alt="" />
+              <img class="zurg" src="./2-2.jpg" alt="" />
+              <img class="zurg" src="./2-3.jpg" alt="" />
+              <img class="zurg" src="./2-4.jpg" alt="" />
+              <img class="zurg" src="./2-5.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="ner">HomePod mini - White</span>
+              <span class="une">$99.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-4.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./4-1.jpg" alt="" />
+              <img class="zurg" src="4-2.jpg" alt="" />
+              <img class="zurg" src="./4-3.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="utga3p">New</span>
+              <span class="ner"
+                >Beats Solo 4 - On-Ear Wireless Headphones -Slate blue</span
+              >
+              <span class="une">$79.00</span>
+            </div>
+          </div>
+          <div class="neg">
+            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <div class="zrg">
+              <img class="zurg" src="./1-shar.jpg" alt="" />
+              <img class="zurg" src="./1-grey.jpg" alt="" />
+              <img class="zurg" src="./1-nogoon.jpg" alt="" />
+              <img class="zurg" src="./1-tsenher.jpg" alt="" />
+              <img class="zurg" src="./1-ygan.jpg" alt="" />
+            </div>
+            <div class="span">
+              <span class="utgap3">New</span>
+              <span class="ner"
+                >iPhone 16 Silicone Case with Magsafe - Star Friut</span
+              >
+              <span class="une">$49.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page5">
+        <div class="bichig3">
+          <span class="store">Only at Apple.</span>
+          <span class="magic">With you every step of the holiday</span>
+        </div>
+        <div class="scroll">
+          <div class="gadar" style="background-image: url(./5-1.jpg)">
+            <span></span>
+          </div>
+          <div class="gadar">
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar">
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./5-4.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./5-5.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+        </div>
+      </div>
+      <div class="page6">
+        <div class="bichig3">
+          <span class="store">The Apple Experience.</span>
+          <span class="magic">Even more awe in store.</span>
+        </div>
+        <div class="scroll">
+          <div class="gadar" style="background-image: url(./6-1.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./6-2.png)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./6-3.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./6-4.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+        </div>
+      </div>
+      <div class="page7">
+        <div class="bichig3">
+          <span class="store">Special Savings.</span>
+          <span class="magic"
+            >Iphone carrier deals and exclusive savings for school, businesses,
+            and more.</span
+          >
+        </div>
+        <div class="scroll">
+          <div class="gadar" style="background-image: url(./7-1.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div cl class="" ass="gadar" style="background-image: url(./7-2.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./7-3.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./7-4.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+          <div class="gadar" style="background-image: url(./7-5.jpg)">
+            <span class=""></span>
+            <span class=""></span>
+            <span class=""></span>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div>Quick Links</div>
+        <div>
+          <div>Order Status</div>
+          <div>Shopping Help</div>
+          <div>Returns</div>
+          <div>Your Saves</div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
